# BigHomeworkBaseVersion

./: CMakeLists.txt  accessUtils.c  accessUtils.h  count_line.bat  date.h  departmentO.c  departmentO.h  doctor.c  doctor.h  main.c  readme.md  reservation.c  reservation.h  utils.c  utils.h
src/: doctordata.txt  reservationdata.txt
